Update javadoc tool